--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -120,3 +120,9 @@ moderation:
     
   # Last message line shown on ban/temp-ban kick screen
   appeal-msg: ''
+  
+fireworks:
+  # Post-match fireworks fire above the winners of the current match
+  post-match: true
+  # Goals spawn fireworks when objectives are completed
+  goals: true
