--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-name: ${project.parent.name}
-description: ${project.parent.description}
+name: PGM
+description: ${description}
 main: ${project.pluginClass}
 softdepend: ${project.pluginSoftDepedencies}
-version: ${project.version}-${git.commit.id.abbrev}
-website: ${project.parent.url}
+version: ${version}-${git.commit.id.abbrev}
+website: ${url}
 author: ${project.author}
