--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: format
+      run: mvn com.coveo:fmt-maven-plugin:check
     - name: build
       run: mvn -U install
