--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: check
-    timeout-minutes: 10
-    if: jobs.check.steps.check.outputs.triggered == 'true'
+    timeout-minutes: 15
+    if: steps.check.outputs.triggered == 'true'
     steps:
     - id: checkout
       uses: actions/checkout@v1
