--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,13 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: cache
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
     - name: format
       run: mvn com.coveo:fmt-maven-plugin:check
     - name: version
@@ -25,7 +32,7 @@ jobs:
         mvn versions:set \
           -DnewVersion=1.8-${GITHUB_REF#refs/heads/}-SNAPSHOT
     - name: nexus
-      run: mvn -U deploy -s settings.xml
+      run: mvn deploy -s settings.xml
       env:
         NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
         NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
