--- a/core/pom.xml
+++ b/core/pom.xml
@@ -80,6 +80,7 @@
                             <exclude>net.sf.trove4j:trove4j:*</exclude>
                             <exclude>org.xerial:sqlite-jdbc:*</exclude>
                             <exclude>org.checkerframework:checker-qual:*</exclude>
+                            <exclude>net.jcip:jcip-annotations:*</exclude>
                         </excludes>
                     </artifactSet>
                     <filters>
