Attach plugin artifacts to each build
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,8 @@ jobs:
       run: mvn com.coveo:fmt-maven-plugin:check
     - name: build
       run: mvn install
+    - name: artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: PGM.jar
+        path: target/PGM-Plugin.jar
