Revamp pom.xml and change to version 0.8-SNAPSHOT * Fixes various shading issues with the SportPaper server * Updates intake to 1.2-SNAPSHOT, which fixes the /help is null bug * Rename output jars to be more descriptive * Downgrade text to 3.0.2, since 3.0.3 has a NoSuchMethodError
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,10 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: format
-      run: mvn com.coveo:fmt-maven-plugin:check
     - name: build
       run: mvn install
     - name: artifact
       uses: actions/upload-artifact@v1
       with:
         name: PGM.jar
-        path: target/PGM-Plugin.jar
+        path: target/PGM.jar
