--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - beta
+      # - beta
   repository_dispatch:
   schedule:
     - cron: 0 1 * * *
@@ -24,13 +24,6 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: format
-      run: mvn com.coveo:fmt-maven-plugin:check
-    - name: version
-      if: github.ref != '/refs/heads/master'
-      run: |
-        mvn versions:set \
-          -DnewVersion=1.8-${GITHUB_REF#refs/heads/}-SNAPSHOT
     - name: nexus
       run: mvn deploy -s settings.xml
       env:
@@ -40,7 +33,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: PGM.jar
-        path: target/PGM-Plugin.jar
+        path: target/PGM.jar
     - name: docker
       run: |
         mvn -pl server compile jib:build \
