--- a/server/pom.xml
+++ b/server/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
@@ -7,12 +8,13 @@
 
     <parent>
         <relativePath>../pom.xml</relativePath>
-        <version>1.8-SNAPSHOT</version>
+        <version>0.8-SNAPSHOT</version>
         <groupId>tc.oc.pgm</groupId>
         <artifactId>PGM</artifactId>
     </parent>
 
     <name>Server</name>
+    <description>An out-of-the-box Bukkit server preloaded with PGM.</description>
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
 
@@ -20,7 +22,7 @@
         <dependency>
             <groupId>tc.oc.pgm</groupId>
             <artifactId>core</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <version>0.8-SNAPSHOT</version>
         </dependency>
 
         <!-- Older version of log4j logging library that barely works -->
@@ -31,7 +33,22 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>PGM-Server-${project.version}-${git.commit.id.abbrev}</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>${project.mainClass}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -41,42 +58,26 @@
                     <!-- Ensures that all classes are loaded into the jar -->
                     <minimizeJar>false</minimizeJar>
                     <artifactSet>
-                        <excludes>
-                            <exclude>tc.oc.pgm:util-bukkit:*</exclude>
-                            <exclude>tc.oc.pgm:util:*</exclude>
-                            <exclude>app.ashcon.intake:intake-bukkit:*</exclude>
-                            <exclude>com.google.guava:guava:*</exclude>
-                            <exclude>com.google.code.gson:gson:*</exclude>
-                            <exclude>com.google.code.findbugs:annotations:*</exclude>
-                            <exclude>net.sf.trove4j:trove4j:*</exclude>
-                            <exclude>org.checkerframework:checker-qual:*</exclude>
-                            <exclude>net.jcip:jcip-annotations:*</exclude>
-                            <exclude>org.xerial:sqlite-jdbc:*</exclude>
-                            <exclude>joda-time:joda-time:*</exclude>
-                            <exclude>net.kyori:*:*</exclude>
-                        </excludes>
+                        <includes>
+                            <include>tc.oc.pgm:core:*</include>
+                            <include>app.ashcon:sportpaper:*</include>
+                            <include>log4j:log4j:*</include>
+                        </includes>
                     </artifactSet>
                     <filters>
                         <filter>
-                            <artifact>*:*</artifact>
+                            <artifact>log4j:log4j:*</artifact>
                             <excludes>
                                 <exclude>META-INF/**</exclude>
-                                <exclude>module-info.class</exclude>
                             </excludes>
                         </filter>
                         <filter>
-                            <artifact>tc.oc.pgm:core:*</artifact>
+                            <artifact>app.ashcon:sportpaper:*</artifact>
                             <excludes>
-                                <exclude>org/jdom2/**</exclude>
-                                <exclude>com/google/gson/**</exclude>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
                             </excludes>
                         </filter>
                     </filters>
-                    <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>${project.mainClass}</mainClass>
-                        </transformer>
-                    </transformers>
                 </configuration>
                 <executions>
                     <execution>
@@ -94,10 +95,11 @@
                 <version>1.8</version>
                 <executions>
                     <execution>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <configuration>
                             <target>
-                                <copy file="${basedir}/target/${project.build.finalName}.jar" tofile="../target/PGM-Server.jar"/>
+                                <copy file="${basedir}/target/${project.build.finalName}.jar"
+                                      tofile="../target/SportPaper-with-PGM.jar"/>
                             </target>
                         </configuration>
                         <goals>
