--- a/util-bukkit/pom.xml
+++ b/util-bukkit/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <relativePath>../pom.xml</relativePath>
-        <version>1.8-SNAPSHOT</version>
+        <version>0.8-SNAPSHOT</version>
         <groupId>tc.oc.pgm</groupId>
         <artifactId>PGM</artifactId>
     </parent>
@@ -16,14 +16,16 @@
         <dependency>
             <groupId>tc.oc.pgm</groupId>
             <artifactId>util</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <version>0.8-SNAPSHOT</version>
         </dependency>
 
         <!-- Fork of Spigot and SportBukkit running Minecraft 1.8 -->
+        <!-- TODO: support non-1.8 and non-SportPaper Bukkit servers -->
         <dependency>
             <groupId>app.ashcon</groupId>
             <artifactId>sportpaper</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
+            <scope>compile</scope> <!-- Remember to exclude in shading -->
         </dependency>
 
         <!-- Multi-protocol library for future Minecraft versions -->
@@ -32,18 +34,22 @@
             <artifactId>viaversion</artifactId>
             <version>2.2.2</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <!-- Text library for creating messages in Minecraft -->
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>text-api</artifactId>
-            <version>3.0.3</version>
+            <version>3.0.2</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>text-adapter-bukkit</artifactId>
             <version>3.0.3</version>
+            <scope>compile</scope>
+            <!-- Exclude Spigot APIs since we already provide Bukkit -->
             <exclusions>
                 <exclusion>
                     <groupId>org.spigotmc</groupId>
@@ -52,13 +58,13 @@
             </exclusions>
         </dependency>
 
-        <!-- Compile-time library used to generate "Delegate" classes -->
-        <!-- TODO: consider removing because unnecessary added complexity -->
+        <!-- Framework for defining and parsing commands -->
+        <!-- TODO: move to EngineHub/Piston or Mojang/brigadier -->
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
-            <scope>provided</scope>
+            <groupId>app.ashcon.intake</groupId>
+            <artifactId>intake-bukkit</artifactId>
+            <version>1.2-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
