--- a/util/pom.xml
+++ b/util/pom.xml
@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <relativePath>../pom.xml</relativePath>
-        <version>1.8-SNAPSHOT</version>
+        <version>0.8-SNAPSHOT</version>
         <groupId>tc.oc.pgm</groupId>
         <artifactId>PGM</artifactId>
     </parent>
@@ -12,18 +13,12 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- Google's common libraries, must be same version as Minecraft server -->
+        <!-- XML parsing library used for all "map.xml" configuration loading -->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>17.0</version>
-        </dependency>
-
-        <!-- Provides annotations such as @Nullable -->
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
-            <version>3.0.1u2</version>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom2</artifactId>
+            <version>2.0.6</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Performance library for fast collections -->
@@ -31,13 +26,8 @@
             <groupId>net.sf.trove4j</groupId>
             <artifactId>trove4j</artifactId>
             <version>3.0.3</version>
-        </dependency>
-
-        <!-- XML parsing library used for all "map.xml" configuration loading -->
-        <dependency>
-            <groupId>org.jdom</groupId>
-            <artifactId>jdom2</artifactId>
-            <version>2.0.6</version>
+            <!-- For now, provided by SportPaper, but most Bukkit servers don't have it -->
+            <scope>provided</scope>
         </dependency>
 
         <!-- Sqlite database driver as a persistent datastore -->
@@ -45,6 +35,8 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.30.1</version>
+            <!-- For now, provided by SportPaper, but newer Bukkit servers don't have it -->
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
