--- a/core/pom.xml
+++ b/core/pom.xml
@@ -60,8 +60,8 @@
                     </filters>
                     <relocations combine.children="append">
                         <relocation>
-                            <pattern>app.ashcon</pattern>
-                            <shadedPattern>tc.oc.pgm.lib.app.ashcon</shadedPattern>
+                            <pattern>app.ashcon.intake</pattern>
+                            <shadedPattern>tc.oc.pgm.lib.app.ashcon.intake</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>net.kyori</pattern>
