--- a/core/src/main/resources/map-pools.yml
+++ b/core/src/main/resources/map-pools.yml
@@ -5,12 +5,12 @@
 #
 # NOTE: Map names are case-sensitive
 
-
 pools:
   default:
-    # Allowed types: ordered (rotation), voted (voted map pool)
+    # Allowed types: ordered (rotation), voted (voted map pool), random (randomly selected maps)
     type: ordered
     enabled: true
+    dynamic: true # If set to true, map pool will be considered when adjusting to best fit player size.
     players: 1
     maps:
       - Airship Battle
