--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,19 @@
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>text-api</artifactId>
-            <version>3.0.2</version>
+            <version>3.0.4</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>text-serializer-legacy</artifactId>
+            <version>3.0.4</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>text-serializer-gson</artifactId>
+            <version>3.0.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
