--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,15 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Library for working with Git in java-->
+        <!-- Not including this will disable GitMapSourceFactory -->
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>5.7.0.202003110725-r</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
