--- a/core/pom.xml
+++ b/core/pom.xml
@@ -73,8 +73,8 @@
                             <shadedPattern>tc.oc.pgm.lib.org.jdom2</shadedPattern>
                         </relocation>
                         <relocation>
-                            <pattern>org.eclipse</pattern>
-                            <shadedPattern>tc.oc.pgm.lib.org.eclipse</shadedPattern>
+                            <pattern>org.eclipse.jgit</pattern>
+                            <shadedPattern>tc.oc.pgm.lib.org.eclipse.jgit</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
